# postgres_otel_api

./: .gitignore  Makefile  README.md  meson.build  otel.c  otel.h  otel_api.c  otel_api.h  otel_demo_exporter--0.1.1.sql  otel_demo_exporter.c  otel_internal.h  otel_log.c  otel_parallel.c  otel_postgres_tracing--0.1.1.sql  otel_postgres_tracing.c  otel_postgres_tracing.control  otel_postgres_tracing.h  otel_producer.c  otel_resource.c  otel_trace.c  test_otel_exporter.control
otel/: Makefile  meson.build  otel--1.0.sql  otel.c  otel.control  otel_internal.h
otel/t/: 001_otel.pl
otel_api/: Makefile  README.md  meson.build  otel.c  otel.h  otel_api--0.1.1.sql  otel_api.c  otel_api.control  otel_api.h  otel_internal.h  otel_parallel.c  otel_producer.c  otel_resource.c
otel_api/t/: 001_otel.pl
otel_demo_exporter/: Makefile  meson.build  otel_demo_exporter--1.0.sql  otel_demo_exporter.c  otel_demo_exporter.control
otel_demo_exporter/t/: 001_file_exporter.pl
otel_postgres_tracing/: Makefile  meson.build  otel_fdw.c  otel_fdw.h  otel_log.c  otel_planpath.c  otel_planpath.h  otel_planshape.c  otel_planshape.h  otel_planspans.c  otel_planspans.h  otel_planwalk.c  otel_planwalk.h  otel_postgres_tracing--1.0.sql  otel_postgres_tracing.c  otel_postgres_tracing.h  otel_sdt_bridge.c  otel_trace.c
scripts/: README.md  refresh-splits.sh
t/: 001_basic.pl  001_file_exporter.pl  001_otel.pl  002_log_emitter.pl  004_sqlcommenter.pl  005_producer_api.pl  006_pgbouncer.pl  007_resource.pl  008_scope.pl  009_order_independent.pl
tests/otel_test_exporter/: Makefile  meson.build  test_otel_exporter--0.1.1.sql  test_otel_exporter--1.0.sql  test_otel_exporter.c
tests/otel_test_exporter/t/: 001_basic.pl  002_log_emitter.pl  003_sampler_policy.pl  004_sqlcommenter.pl  005_producer_api.pl  006_pgbouncer.pl  007_resource.pl  008_scope.pl  009_order_independent.pl
